<resources>
    <string name="app_name">eRunning</string>
    <string name="hello_world">Hello World</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>
    <string name="register">Registrarme</string>
    <string name="login">Iniciar Sesión</string>
    <string name="loginGoogle">Iniciar Sesión con Google</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="save">Guardar datos</string>
    <string name="delete">Eliminar</string>
    <string name="get">Recuperar</string>
    <string name="sportActivity">¿Cuánto deporte sueles practicar?</string>
    <string name="username">Nombre de usuario</string>
    <string name="email">Correo electrónico</string>
    <string name="provider">Provider</string>
    <string name="password">Contraseña</string>
    <string name="prefs_file">com.andmonosu.erunning.PREFERENCE_FILE_KEY</string>
    <string name="image_file">com.andmonosu.erunning.PREFERENCE_FILE_KEY</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chronometerTitle">Cronómetro</string>
    <string name="your_weight">Tu peso</string>
    <string name="your_gender">Tu género</string>
    <string name="your_age">Tu edad</string>
    <string name="your_email">Tu correo electrónico</string>
    <string name="your_height">Tu estatura</string>
    <string name="your_activity">Tu actividad</string>
    <string name="my_plans">Mis Planes</string>
    <string name="name">Nombre</string>
    <string name="lastName">Apellidos</string>
    <string name="uPhoto">Upload Photo</string>
    <string name="next">Siguiente</string>
    <string name="distance_value">%d metros</string>
    <string name="pace_value">%f min/km</string>
    <string name="distance">Distancia</string>
    <string name="distance_session">Distancia Recorrida</string>
    <string name="details_distance">Distancia que se va a correr:</string>
    <string name="pace">Ritmo medio</string>
    <string name="pace_session">Ritmo medio de carrera</string>
    <string name="details_pace">Ritmo medio de carrera</string>
    <string name="objective">¿Cuál es tu objetivo?</string>
    <string name="details_time">Duración del entrenamiento</string>
    <string name="details_type">Tipo de entrenamiento</string>
    <string name="new_plan_name">Nombre del nuevo plan</string>
    <string name="new_plan_weeks">Semanas</string>
    <string name="create_new_plan">Crear Plan</string>
    <string name="edit_plan">Editar Plan</string>
    <string name="make_active">Convertir en plan activo</string>
    <string name="time_session">Duración del entrenamiento</string>
    <string name="type_session">Tipo de entrenamiento</string>
</resources>